--- a/rstudio-cloud.Rmd
+++ b/rstudio-cloud.Rmd
@@ -16,7 +16,7 @@ output:
         <div class="progress-bar-container">
           <div class="progress-bar" style="width: calc(%current% / %total% * 100%);">
           </div>
-        </div>`
+        </div>
 ---
 
 ```{r child = "setup.Rmd"}
